--- a/index.html
+++ b/index.html
@@ -3,8 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+
+  <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+  <!-- <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script> -->
+
+  <!-- <script src="https://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script> -->
+  <script src="https://code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
+
+  <script src="/js/codemirror/lib/codemirror.js"></script>
+  <script src="/js/codemirror/xml/xml.js"></script>
+  <script src="/js/codemirror/markdown/markdown.js"></script>
+  <script src="/js/codemirror/gfm/gfm.js"></script>
+  <script src="/js/codemirror/javascript/javascript.js"></script>
+
+  <script src="/js/marked.js"></script>
+  <script src="/js/highlight.pack.js"></script>
+
+  <script src="/js/editor.js"></script>
+  <script src="/js/script.js"></script>
 </head>
 <body>
+
+
 
 </body>
 </html>
