--- a/index.html
+++ b/index.html
@@ -7,24 +7,70 @@
   <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
   <!-- <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script> -->
 
-  <!-- <script src="https://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script> -->
   <script src="https://code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
+  <!-- <script src="https://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script> -->
 
-  <script src="/js/codemirror/lib/codemirror.js"></script>
-  <script src="/js/codemirror/xml/xml.js"></script>
-  <script src="/js/codemirror/markdown/markdown.js"></script>
-  <script src="/js/codemirror/gfm/gfm.js"></script>
-  <script src="/js/codemirror/javascript/javascript.js"></script>
+  <link rel="stylesheet" href="js/codemirror/lib/codemirror.css">
+  <link rel="stylesheet" href="style/codemirror/override.css">
 
-  <script src="/js/marked.js"></script>
-  <script src="/js/highlight.pack.js"></script>
+  <script src="js/codemirror/lib/codemirror.js"></script>
+  <script src="js/codemirror/xml/xml.js"></script>
+  <script src="js/codemirror/markdown/markdown.js"></script>
+  <script src="js/codemirror/gfm/gfm.js"></script>
+  <script src="js/codemirror/javascript/javascript.js"></script>
 
-  <script src="/js/editor.js"></script>
-  <script src="/js/script.js"></script>
+  <script src="js/marked.js"></script>
+  <script src="js/highlight.pack.js"></script>
+
+  <script src="js/editor.js"></script>
+  <script src="js/script.js"></script>
+
+
+  <style>
+  <style>
+    .CodeMirror pre{
+      line-height: 14px;
+    }
+    #editor, .CodeMirror{
+      position: fixed;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      width: 50%;
+      overflow: auto;
+      font-size: 12px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    }
+    .CodeMirror-scroll {
+      height: 100%;
+      min-height: 100%;
+    }
+
+    #preview{
+      position: fixed;
+      top: 0;
+      right: 0;
+      left: 50%;
+      bottom: 0;
+      overflow: auto;
+      padding: 10px;
+      padding-left: 20px;
+      color: #444;
+      font-family:Georgia, Palatino, 'Palatino Linotype', Times, 'Times New Roman', serif;
+      font-size: 16px;
+      line-height: 1.5em
+    }
+  </style>
 </head>
 <body>
+<textarea id="editor" class="feature">
+  # title
+  ## sub title
+  1. 1asdfsdf
+  2. asdfasdf
+</textarea>
+<div id="preview">
 
-
-
+</div>
 </body>
 </html>
