--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
   <!-- <script src="https://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script> -->
 
   <link rel="stylesheet" href="js/codemirror/lib/codemirror.css">
-  <link rel="stylesheet" href="style/codemirror/override.css">
+  <link rel="stylesheet" href="style/codemirror/solarized.css">
 
   <script src="js/codemirror/lib/codemirror.js"></script>
   <script src="js/codemirror/xml/xml.js"></script>
   <script src="js/codemirror/markdown/markdown.js"></script>
   <script src="js/codemirror/gfm/gfm.js"></script>
   <script src="js/codemirror/javascript/javascript.js"></script>
+  <!-- <script src="js/codemirror/addon/active-line.js"></script> -->
 
   <script src="js/marked.js"></script>
   <script src="js/highlight.pack.js"></script>
@@ -38,7 +39,7 @@
       bottom: 0;
       width: 50%;
       overflow: auto;
-      font-size: 12px;
+      font-size: 16px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.2);
     }
     .CodeMirror-scroll {
