--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 
   <link rel="stylesheet" href="js/codemirror/lib/codemirror.css">
   <link rel="stylesheet" href="style/codemirror/solarized.css">
+  <link rel="stylesheet" href="style/highlight/tomorrow.css">
 
   <script src="js/codemirror/lib/codemirror.js"></script>
   <script src="js/codemirror/xml/xml.js"></script>
   <script src="js/codemirror/markdown/markdown.js"></script>
   <script src="js/codemirror/gfm/gfm.js"></script>
-  <script src="js/codemirror/javascript/javascript.js"></script>
+  <!-- <script src="js/codemirror/javascript/javascript.js"></script> -->
   <!-- <script src="js/codemirror/addon/active-line.js"></script> -->
 
   <script src="js/marked.js"></script>
@@ -65,10 +66,17 @@
 </head>
 <body>
 <textarea id="editor" class="feature">
-  # title
-  ## sub title
-  1. 1asdfsdf
-  2. asdfasdf
+# title
+## sub title
+1. 1asdfsdf
+2. asdfasdf
+
+``` javascript
+var sdfasd;
+function GAGA(){
+ var abc = "123123"
+}
+```
 </textarea>
 <div id="preview">
 
