--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       line-height: 14px;
     }
     #editor, .CodeMirror{
+      height: 100%;
       position: fixed;
       top: 0;
       left: 0;
