--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <!-- <script src="https://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script> -->
 
   <link rel="stylesheet" href="js/codemirror/lib/codemirror.css">
-  <link rel="stylesheet" href="style/codemirror/solarized.css">
+  <!-- <link rel="stylesheet" href="style/codemirror/solarized.css"> -->
+  <link rel="stylesheet" href="style/codemirror/override.css">
   <link rel="stylesheet" href="style/highlight/tomorrow.css">
 
   <script src="js/codemirror/lib/codemirror.js"></script>
@@ -69,15 +70,50 @@
 <body>
 <textarea id="editor" class="feature">
 # title
-## sub title
-1. 1asdfsdf
-2. asdfasdf
+## H2 title
+### H3
+#### H4
 
-``` javascript
-var sdfasd;
-function GAGA(){
- var abc = "123123"
-}
+In the words of Abraham Lincoln:
+
+> Pardon my french
+
+On July 2, an alien *mothership* entered Earth's orbit and deployed several dozen saucer-shaped **"destroyer"** spacecraft, each 15 miles (24 km) wide.
+
+
+*This text will be italic*
+
+**This text will be bold**
+
+* Item
+  * fgsdfgsdfg
+* Item
+* Item
+
+- Item
+- Item
+- Item
+
+1. Item 1
+2. Item 2
+3. Item 3
+
+wow_great_stuff
+
+http://example.com
+
+~~Mistaken text.~~
+
+First Header  | Second Header
+------------- | -------------
+Content Cell  | Content Cell
+Content Cell  | Content Cell
+
+
+```ruby
+require 'redcarpet'
+markdown = Redcarpet.new("Hello World!")
+puts markdown.to_html
 ```
 </textarea>
 <div id="preview">
